--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@ckeditor/ckeditor5-upload": "^10.0.2",
     "postcss-loader": "^2.1.5",
     "raw-loader": "^0.5.1",
+    "serve": "^9.4.0",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.15.0",
@@ -61,6 +62,8 @@
     "url": "https://github.com/ckeditor/ckeditor5-build-classic.git"
   },
   "scripts": {
+    "start": "serve ./",
+    "dev": "webpack --watch",
     "build": "webpack --mode production",
     "preversion": "npm run build; if [ -n \"$(git status src/ckeditor.js build/ --porcelain)\" ]; then git add -u src/ckeditor.js build/ && git commit -m 'Internal: Build.'; fi"
   }
