--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@ckeditor/ckeditor5-build-classic",
-	"version": "11.0.1",
+	"name": "eh-ckeditor",
+	"version": "11.0.1-20",
 	"description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
 	"keywords": [
 		"ckeditor5-build",
@@ -25,6 +25,8 @@
 		"build"
 	],
 	"devDependencies": {
+		"@babel/core": "^7.0.1",
+		"@babel/preset-env": "^7.0.0",
 		"@ckeditor/ckeditor5-adapter-ckfinder": "^10.0.2",
 		"@ckeditor/ckeditor5-autoformat": "^10.0.2",
 		"@ckeditor/ckeditor5-basic-styles": "^10.0.2",
@@ -41,6 +43,7 @@
 		"@ckeditor/ckeditor5-paragraph": "^10.0.2",
 		"@ckeditor/ckeditor5-theme-lark": "^11.0.0",
 		"@ckeditor/ckeditor5-upload": "^10.0.2",
+		"babel-loader": "^8.0.2",
 		"postcss-loader": "^2.1.5",
 		"raw-loader": "^0.5.1",
 		"serve": "^9.4.0",
@@ -63,7 +66,8 @@
 	},
 	"scripts": {
 		"start": "serve ./",
-		"build": "webpack --watch",
+		"dev": "webpack --watch",
+		"build": "webpack --mode production",
 		"preversion": "npm run build; if [ -n \"$(git status src/ckeditor.js build/ --porcelain)\" ]; then git add -u src/ckeditor.js build/ && git commit -m 'Internal: Build.'; fi"
 	}
 }
