--- a/package.json
+++ b/package.json
@@ -69,5 +69,8 @@
 		"dev": "webpack --watch",
 		"build": "webpack --mode production",
 		"preversion": "npm run build; if [ -n \"$(git status src/ckeditor.js build/ --porcelain)\" ]; then git add -u src/ckeditor.js build/ && git commit -m 'Internal: Build.'; fi"
+	},
+	"dependencies": {
+		"@ckeditor/ckeditor5-engine": "^10.2.0"
 	}
 }
