--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eh-ckeditor",
-	"version": "11.0.2-24",
+	"version": "11.0.2-25",
 	"description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
 	"keywords": [
 		"ckeditor5-build",
@@ -28,6 +28,7 @@
 		"@babel/core": "^7.0.1",
 		"@babel/preset-env": "^7.0.0",
 		"@ckeditor/ckeditor5-adapter-ckfinder": "^10.0.2",
+		"@ckeditor/ckeditor5-alignment": "^10.0.2",
 		"@ckeditor/ckeditor5-autoformat": "^10.0.2",
 		"@ckeditor/ckeditor5-basic-styles": "^10.0.2",
 		"@ckeditor/ckeditor5-block-quote": "^10.0.2",
@@ -36,6 +37,7 @@
 		"@ckeditor/ckeditor5-easy-image": "^10.0.2",
 		"@ckeditor/ckeditor5-editor-classic": "^11.0.0",
 		"@ckeditor/ckeditor5-essentials": "^10.1.1",
+		"@ckeditor/ckeditor5-font": "^10.0.2",
 		"@ckeditor/ckeditor5-heading": "^10.0.2",
 		"@ckeditor/ckeditor5-image": "^10.2.0",
 		"@ckeditor/ckeditor5-link": "^10.0.3",
