--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eh-ckeditor",
-	"version": "11.0.2-40",
+	"version": "11.0.2-45",
 	"description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
 	"keywords": [
 		"ckeditor5-build",
@@ -75,6 +75,7 @@
 		"preversion": "npm run build; if [ -n \"$(git status src/ckeditor.js build/ --porcelain)\" ]; then git add -u src/ckeditor.js build/ && git commit -m 'Internal: Build.'; fi"
 	},
 	"dependencies": {
-		"@ckeditor/ckeditor5-engine": "^10.2.0"
+		"@ckeditor/ckeditor5-engine": "^10.2.0",
+		"@fortawesome/fontawesome-free": "^5.4.1"
 	}
 }
