--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eh-ckeditor",
-	"version": "11.0.2-79",
+	"version": "11.0.2-84",
 	"description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
 	"keywords": [
 		"ckeditor5-build",
@@ -71,7 +71,7 @@
 	"scripts": {
 		"start": "serve ./",
 		"dev": "webpack --watch",
-		"build": "webpack --mode production",
+		"build": "webpack --mode development",
 		"preversion": "npm run build; if [ -n \"$(git status src/ckeditor.js build/ --porcelain)\" ]; then git add -u src/ckeditor.js build/ && git commit -m 'Internal: Build.'; fi"
 	},
 	"dependencies": {
